# Sheaft.Web.Api/wwwroot/swagger/v1/swagger.yaml
@@ -428,6 +428,37 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProblemDetails'
+    get:
+      tags:
+        - ListReturnables
+      summary: List available returnables for supplier
+      operationId: ListReturnables
+      parameters:
+        - name: page
+          in: query
+          schema:
+            type: integer
+            format: int32
+            default: 1
+        - name: take
+          in: query
+          schema:
+            type: integer
+            format: int32
+            default: 10
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReturnableDtoPaginatedResults'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
   '/api/batches/{id}':
     delete:
       tags:
@@ -571,6 +602,30 @@ paths:
       responses:
         '204':
           description: No Content
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+    get:
+      tags:
+        - GetReturnable
+      summary: Retrieve returnable with id
+      operationId: GetReturnable
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReturnableDto'
         '400':
           description: Bad Request
           content:
@@ -1512,6 +1567,11 @@ components:
         vat:
           type: number
           format: double
+        returnable:
+          $ref: '#/components/schemas/ReturnableDto'
+        returnableId:
+          type: string
+          nullable: true
       additionalProperties: false
     ProductDtoPaginatedResults:
       type: object
@@ -1620,6 +1680,52 @@ components:
         confirm:
           type: string
           nullable: true
+      additionalProperties: false
+    ReturnableDto:
+      type: object
+      properties:
+        id:
+          type: string
+          nullable: true
+        name:
+          type: string
+          nullable: true
+        code:
+          type: string
+          nullable: true
+        unitPrice:
+          type: number
+          format: double
+        vat:
+          type: number
+          format: double
+      additionalProperties: false
+    ReturnableDtoPaginatedResults:
+      type: object
+      properties:
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/ReturnableDto'
+          nullable: true
+        next:
+          type: string
+          nullable: true
+        previous:
+          type: string
+          nullable: true
+        pageNumber:
+          type: integer
+          format: int32
+        itemsPerPage:
+          type: integer
+          format: int32
+        totalItems:
+          type: integer
+          format: int32
+        totalPages:
+          type: integer
+          format: int32
       additionalProperties: false
     SupplierInfoRequest:
       type: object
